--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,11 @@
       <version>1.18.30</version>
       <scope>provided</scope>
     </dependency>
+    <dependency>
+      <groupId>ch.qos.logback</groupId>
+      <artifactId>logback-classic</artifactId>
+      <version>1.4.11</version>
+    </dependency>
 
     <!-- json -->
     <dependency>
