--- a/pom.xml
+++ b/pom.xml
@@ -106,6 +106,12 @@
       <artifactId>tomcat-dbcp</artifactId>
       <version>9.0.31</version>
     </dependency>
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-lang3</artifactId>
+      <version>3.17.0</version>
+    </dependency>
 
     <!-- fileupload -->
     <dependency>
